--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,19 +11,10 @@ body{
     font-size: 18px;
 }
 
-.container{
-    width: 80%;
-    margin: 0 auto;
-    max-width: 1100px;
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Montserrat', sans-serif;
 }
 
-h1{
-    display: none;/*Some o h1 da tela, mas o leitor ainda lê*/
-}
-
-h2{
-    letter-spacing: 2px;
-}
 
 .header-back{
     /*ackground-color: rgb(22, 95, 145);*/
@@ -84,7 +75,7 @@ h2{
 
 .banner-predio{
     display: flex;
-    background-image: url(../Imagens/banner_IMG_1600.jpg);
+    background-image: url(../imgs/banner_IMG_1600.jpg);
     background-size: cover;
     height: 500px;
     background-position: center;
